tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_constant_expression_receiver_fast_path.objc3
module MessageSendNonzeroConstantExpressionReceiverFastPath;

fn main() -> i32 {
  return [(3 + 4) ping];
}
