tests/tooling/fixtures/native/recovery/negative/negative_pure_definition_impure_message_send.objc3
// Negative fixture: pure definitions reject message sends as side effects.
// Expected diagnostic code(s): O3S215.
module NegativePureDefinitionImpureMessageSend;

pure fn touch() -> i32 {
  return [1 ping];
}

fn main() -> i32 {
  return touch();
}
